--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Lipsticks</title>
-</head>
-<body>
-	<h1>Lips</h1>
-</body>
-</html>
+---
+layout: default
+---
+<h1>lipsticks</h1>
+
+<p>Index for lipsticks Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, error.</p>
